--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,9 +124,10 @@ main {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	justify-content: center;
+	align-items: center;
 	gap: 24px;
-	height: 584px;
-	margin-top: 72px;
+	margin-top: 72px !important;
+	width: fit-content;
 }
 
 .information__container {
@@ -221,8 +222,6 @@ main {
 }
 
 #О-нас {
-	height: 452px;
-	width: 1536px;
 	margin-top: 72px;
 	margin-bottom: 72px;
 	display: flex;
@@ -246,7 +245,7 @@ h6 {
 .advantages__list {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	height: 392px;
+	height: fit-content;
 	gap: 24px;
 }
 
@@ -270,7 +269,7 @@ h6 {
 }
 
 #Гарантии {
-	height: 671px;
+	height: fit-content;
 	width: 1536px;
 	display: flex;
 	flex-direction: column;
@@ -288,7 +287,6 @@ h6 {
 }
 
 .documents__container {
-	height: 579px;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	gap: 24px;
@@ -395,13 +393,14 @@ h6 {
 
 #questions__container {
 	height: 554px;
-	width: 1536px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	margin-bottom: 72px;
 	background-color: var(--color-light-gray);
 	border-radius: 16px;
+	margin: 0 auto;
+	margin-bottom: 70px;
 }
 
 .questions__grid {
@@ -409,10 +408,6 @@ h6 {
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: repeat(6, 48px);
 	gap: 24px;
-	width: 358px;
-	max-height: 497px;
-	position: relative;
-	right: 84px;
 }
 
 .form__item--large {
